--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet"  href="styles.css">
 </head>
 <body>
+
+
   <div class="container">
         <div class="heading">
             <h1 >To-Do List</h1>
@@ -31,8 +33,21 @@
               </div>-->
             
             </div>
+
+
+
   </div>
-  
+
+  <p id="des">
+    <h3>Instructions</h3>
+    <ul id="instructions">
+      <li id="instruction">Enter a task and click add task or enter key to add it to the list.</li>
+      <li id="instruction">To mark a task as complete(or back to incomplete), click on the task name.</li>
+      <li id="instruction">To edit the task name, click on Edit, and then Save.</li>
+      <li id="instruction">To delete a task, click on the "x" button.</li>
+    </ul>
+  </p>
+
   <script src="script.js"></script>
 </body>
 </html>
